// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> href 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="corn-link corn-link-default corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
        href="/home"
      >
        @CornUI
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="corn-link corn-link-default corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
      href="/home"
    >
      @CornUI
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Button /> icon 1`] = `
<div>
  <button
    class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary corn-btn-child-icon"
    type="button"
  >
    @CornUI
    <div
      class=""
    >
      我是图标
    </div>
  </button>
</div>
`;

exports[`<Button /> size 1`] = `
<div>
  <div
    class=""
  >
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-max corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-big corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-large corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-small corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-mini corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
  </div>
</div>
`;

exports[`<Button /> type 1`] = `
<div>
  <div
    class=""
  >
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-error"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-link"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-pop"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
      type="button"
    >
      @CornUI
    </button>
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-warn"
      type="button"
    >
      @CornUI
    </button>
  </div>
</div>
`;

exports[`<Button /> 固定宽带 1`] = `
<div>
  <button
    class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary corn-btn-auto"
    type="button"
  />
</div>
`;

exports[`<Button /> 基本使用 1`] = `
<div>
  <button
    class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
    type="button"
  />
</div>
`;

exports[`<Button /> 复杂标题：节点+文字 1`] = `
<div>
  <button
    class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
    type="button"
  >
    <div
      class=""
    >
      <span
        class="taro-text"
      >
        我是图标
      </span>
    </div>
    <span
      class="taro-text"
    >
      @CornUI
    </span>
  </button>
</div>
`;

exports[`<Button /> 标题：@CornUI 1`] = `
<div>
  <button
    class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
    type="button"
  >
    @CornUI
  </button>
</div>
`;
